# atlas

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  dev.sh  docker-compose.yml
backend/: .env.example  Cargo.toml
backend/migrations/: 20240101000001_create_workspace.sql  20240101000002_create_project.sql  20240101000003_create_node.sql  20240101000004_create_node_edge.sql  20240101000005_create_node_version.sql  20240101000006_create_event.sql  20240101000007_create_snapshot.sql  20240101000008_create_repo.sql  20240101000009_create_project_repo.sql  20240101000010_create_pr.sql  20240101000011_create_verification_report.sql  20240101000012_create_agent_run.sql  20240101000013_create_provider_config.sql  20240101000014_create_export_log.sql  20240101000015_create_import_source.sql  20240101000016_create_import_mapping.sql
backend/migrations-sqlite/: 20240101000001_create_workspace.sql  20240101000002_create_project.sql  20240101000003_create_node.sql  20240101000004_create_node_edge.sql  20240101000005_create_node_version.sql  20240101000006_create_event.sql  20240101000007_create_snapshot.sql  20240101000008_create_repo.sql  20240101000009_create_project_repo.sql  20240101000010_create_pr.sql  20240101000011_create_verification_report.sql  20240101000012_create_agent_run.sql  20240101000013_create_provider_config.sql  20240101000014_create_export_log.sql  20240101000015_create_import_source.sql  20240101000016_create_import_mapping.sql
backend/src/: lib.rs  main.rs  watcher.rs  ws.rs
backend/src/ai/: mod.rs  (+2 more)
backend/tests/: health.rs
(+159 files in other folders)
